--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "main": "src/index.js",
   "author": "Nikoloz Otiashvili",
   "scripts": {
-    "start": "parcel src/index.html",
+    "start": "parcel --no-cache src/index.html",
     "kalduna": "bash ./generate.sh ./domql-smbls-components"
   },
   "license": "MIT",
   "dependencies": {
+    "@babel/preset-react": "^7.22.3",
     "@emotion/react": "^11.11.0",
-    "parcel": "^2.9.1",
+    "@symbo.ls/react": "^2.11.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
     "@emotion/babel-plugin": "^11.11.0",
+    "parcel": "^2.9.1",
     "process": "^0.11.10"
   }
 }
