--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "src/index.js",
   "author": "Nikoloz Otiashvili",
   "scripts": {
-    "start": "parcel serve -p8081 --no-cache src/wall/index.html --dist-dir ./dist/wall/.",
-    "convert": "npx esbuild convert.js --outfile=./dist/convert/convert.cjs --bundle --platform=node --target=es2020 --format=cjs && node ./dist/convert/convert.cjs"
+    "start": "parcel serve -p8081 --no-cache src/index.html --dist-dir ./dist/wall/.",
+    "convert": "npx esbuild convert.js --outfile=./dist/convert/convert.cjs --bundle --platform=node --target=es2020 --format=cjs && rm -rf src/uikit/ && node ./dist/convert/convert.cjs"
   },
   "license": "MIT",
   "dependencies": {
