--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.22.3",
     "@emotion/react": "^11.11.0",
+    "@symbo.ls/create": "^2.11.138",
     "@symbo.ls/react": "latest",
     "kalduna": "latest",
     "react": "^18.2.0",
