--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.0",
     "@emotion/babel-plugin": "^11.11.0",
+    "buffer": "^5.5.0||^6.0.0",
     "parcel": "^2.9.1",
     "process": "^0.11.10"
   }
