--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "Nikoloz Otiashvili",
   "scripts": {
     "start": "parcel serve -p8081 --no-cache src/index.html --dist-dir ./dist/wall/.",
-    "convert": "npx esbuild convert.js --outfile=./dist/convert/convert.cjs --bundle --platform=node --target=es2020 --format=cjs && rm -rf src/uikit/ && node ./dist/convert/convert.cjs"
+    "convert": "bash convert.sh",
+    "convert:buildscript": "npx esbuild convert.js --outfile=./dist/convert/convert.cjs --bundle --platform=node --target=es2020 --format=cjs && rm -rf src/uikit/ && node ./dist/convert/convert.cjs"
   },
-  "license": "MIT",
+  "license": "UNLICENSED",
   "dependencies": {
     "@babel/preset-react": "^7.22.3",
     "@emotion/react": "^11.11.0",
@@ -17,6 +18,7 @@
     "@symbo.ls/react": "latest",
     "kalduna": "latest",
     "react": "^18.2.0",
+    "@symbo.ls/react-timepicker": "latest",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
