--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "author": "Nikoloz Otiashvili",
   "scripts": {
-    "start": "parcel serve -p8081 --no-cache src/index.html --dist-dir ./dist/wall/.",
+    "start": "parcel serve -p8081 --no-cache src/index.html --dist-dir ./dist/wall/. --no-cache",
     "convert": "bash convert.sh",
     "convert:buildscript": "npx esbuild convert.js --outfile=./dist/convert/convert.cjs --bundle --platform=node --target=es2020 --format=cjs && rm -rf src/uikit/ && node ./dist/convert/convert.cjs"
   },
