--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@emotion/react": "^11.11.0",
     "@parcel/config-default": "^2.9.3",
     "@parcel/transformer-raw": "^2.9.3",
-    "@symbo.ls/cli": "^2.11.159",
-    "@symbo.ls/create": "^2.11.138",
+    "@symbo.ls/cli": "latest",
+    "@symbo.ls/create": "latest",
+    "@symbo.ls/convert": "latest",
     "@symbo.ls/react": "latest",
     "kalduna": "latest",
     "react": "^18.2.0",
