--- a/packages/Atoms/package.json
+++ b/packages/Atoms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@symbo.ls/react-atoms",
+  "name": "@symbo.ls/react-atoms-1",
   "version": "2.12.1",
   "license": "MIT",
   "dependencies": {
