--- a/packages/Button/package.json
+++ b/packages/Button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@symbo.ls/react-button",
+  "name": "@symbo.ls/react-button-1",
   "version": "2.12.1",
   "license": "MIT",
   "dependencies": {
