--- a/packages/Icon/package.json
+++ b/packages/Icon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@symbo.ls/react-icon",
+  "name": "@symbo.ls/react-icon-1",
   "version": "2.12.1",
   "license": "MIT",
   "dependencies": {
