--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@symbo.ls/react",
+  "name": "@symbo.ls/react-2",
   "version": "2.11.222",
   "license": "MIT",
   "gitHead": "9d7c64eccdec7466262b60ceb8348b6f9909b004",
