--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,4 @@
 {
   "npmClient": "yarn",
-  "version": "2.12.1",
-  "useWorkspaces": true,
-  "packages": [
-    "packages/generated/",
-    "packages/generated/*"
-  ]
+  "version": "2.12.1"
 }
