--- a/packages/Box/package.json
+++ b/packages/Box/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@symbo.ls/react-box",
+  "name": "@symbo.ls/react-box-1",
   "version": "2.12.1",
   "license": "MIT",
   "dependencies": {
