--- a/example/generated-packages/Slider/package.json
+++ b/example/generated-packages/Slider/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@emotion/css": "^11.11.0",
     "@emotion/react": "^11.11.0",
-    "@symbo.ls/button": "latest",
-    "@symbo.ls/create": "latest",
-    "@symbo.ls/react": "latest",
-    "@symbo.ls/scratch": "latest",
-    "css-in-props": "latest"
+    "@symbo.ls/button": "^2.11.0",
+    "@symbo.ls/create": "^2.11.0",
+    "@symbo.ls/react": "^2.11.0",
+    "@symbo.ls/scratch": "^2.11.0",
+    "css-in-props": "^2.11.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
