--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
-    "@symbo.ls/cli": "latest",
-    "@symbo.ls/convert": "latest",
-    "@symbo.ls/create": "latest",
-    "@symbo.ls/react": "latest",
+    "@symbo.ls/cli": "^2.11.0",
+    "@symbo.ls/create": "^2.11.0",
+    "@symbo.ls/react": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
