--- a/packages/Box/package.json
+++ b/packages/Box/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@symbo.ls/create": "latest",
-    "@symbo.ls/react-provider": "latest",
-    "css-in-props": "latest"
+    "@symbo.ls/create": "^2.11.0",
+    "@symbo.ls/react-provider": "^2.11.0",
+    "css-in-props": "^2.11.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
