--- a/packages/Button/package.json
+++ b/packages/Button/package.json
@@ -3,9 +3,9 @@
   "version": "2.11.221",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@domql/utils": "latest",
-    "@symbo.ls/button": "latest",
-    "@symbo.ls/react-icon": "latest"
+    "@domql/utils": "^2.5.0",
+    "@symbo.ls/button": "^2.11.0",
+    "@symbo.ls/react-icon": "^2.11.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
