--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "smbls": "latest"
+    "smbls": "^2.11.0"
   },
   "devDependencies": {},
   "type": "module",
