--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@symbo.ls/cli": "^2.11.0",
-    "@symbo.ls/create": "^2.11.0",
-    "@symbo.ls/react": "^2.11.0",
+    "domql": "^2.5.0",
+    "smbls": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
