--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@symbo.ls/react",
-  "version": "2.13.0",
+  "version": "2.13.1",
   "license": "MIT",
   "gitHead": "7d9a9516fefa2efe5e6c86416e9cd7f15414748d",
   "dependencies": {
-    "smbls": "^2.11.0",
-    "@symbo.ls/react-atoms": "^2.13.0",
-    "@symbo.ls/react-box": "^2.13.0",
-    "@symbo.ls/react-icon": "^2.13.0",
-    "@symbo.ls/react-button": "^2.13.0",
-    "@symbo.ls/react-provider": "^2.13.0",
-    "@symbo.ls/react-avatar": "^2.13.0"
+    "@symbo.ls/react-atoms": "^2.13.1",
+    "@symbo.ls/react-avatar": "^2.13.1",
+    "@symbo.ls/react-box": "^2.13.1",
+    "@symbo.ls/react-button": "^2.13.1",
+    "@symbo.ls/react-icon": "^2.13.1",
+    "@symbo.ls/react-provider": "^2.13.1",
+    "smbls": "^2.11.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
