--- a/packages/Avatar/package.json
+++ b/packages/Avatar/package.json
@@ -23,12 +23,12 @@
     "dist"
   ],
   "scripts": {
-    "copy:package:cjs": "cp ../../../build/package-cjs.json dist/cjs/package.json",
+    "copy:package:cjs": "cp ../../build/package-cjs.json dist/cjs/package.json",
     "build:esm": "npx esbuild *.js --target=es2020 --format=esm --outdir=dist/esm --loader:.js=jsx",
     "build:cjs": "npx esbuild *.js --target=node16 --format=cjs --outdir=dist/cjs --loader:.js=jsx",
     "build:iife": "npx esbuild *.js --target=node16 --format=iife --outdir=dist/iife",
     "build": "yarn build:esm && yarn build:cjs",
     "prepublish": "rimraf -I dist && yarn build && yarn copy:package:cjs"
   },
-  "gitHead": "7d9a9516fefa2efe5e6c86416e9cd7f15414748d"
+  "gitHead": "405dd5a7d7e815a805a27a63c4b07594b0585630"
 }
