updated smbls version

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@emotion/react": "^11.11.0",
     "@symbo.ls/cli": "^2.11.0",
     "domql": "^2.5.0",
-    "smbls": "^2.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "smbls": "^2.11.460"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
