--- a/packages copy/avatar/package.json
+++ b/packages copy/avatar/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@symbo.ls/react-atoms",
+  "name": "@symbo.ls/react-avatar",
   "version": "2.13.8",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@symbo.ls/atoms": "^2.11.0",
-    "@symbo.ls/react-box": "^2.13.7",
-    "css-in-props": "^2.11.457"
+    "@domql/utils": "^2.5.0",
+    "@symbo.ls/icon": "^2.11.0",
+    "@symbo.ls/react-atoms": "^2.13.8"
   },
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "type": "module",
-  "module": "dist/esm/index.js",
+  "module": "index.js",
   "unpkg": "dist/iife/index.js",
   "jsdelivr": "dist/iife/index.js",
   "main": "index.js",
@@ -26,8 +26,8 @@
     "copy:package:cjs": "cp ../../build/package-cjs.json dist/cjs/package.json",
     "build:esm": "npx esbuild *.js --target=es2020 --format=esm --outdir=dist/esm --loader:.js=jsx",
     "build:cjs": "npx esbuild *.js --target=node16 --format=cjs --outdir=dist/cjs --loader:.js=jsx",
-    "build:iife": "npx esbuild *.js --target=node16 --format=iife --outdir=dist/iife --loader:.js=jsx",
-    "build": "yarn build:esm && yarn build:cjs",
+    "build:iife": "npx esbuild *.js --target=node16 --format=iife --outdir=dist/iife",
+    "build": "yarn build:esm; yarn build:cjs",
     "prepublish": "rimraf -I dist && yarn build && yarn copy:package:cjs"
   },
   "gitHead": "f05f066d450939bd46baf3ddda331a5790518873"
