--- a/packages copy/button/package.json
+++ b/packages copy/button/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "@symbo.ls/react-provider",
-  "version": "2.13.5",
+  "name": "@symbo.ls/react-button",
+  "version": "2.13.8",
   "dependencies": {
     "@babel/runtime": "^7.11.2",
-    "@emotion/react": "^11.11.0",
-    "@symbo.ls/default-config": "^2.11.0",
-    "@symbo.ls/fetch": "^2.11.0",
-    "@symbo.ls/init": "^2.11.0",
-    "@symbo.ls/socket": "^2.11.0",
-    "process": "^0.11.10"
+    "@domql/utils": "^2.5.0",
+    "@symbo.ls/button": "^2.11.0",
+    "@symbo.ls/react-icon": "^2.13.8"
   },
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "type": "module",
-  "module": "dist/esm/index.js",
+  "module": "index.js",
   "unpkg": "dist/iife/index.js",
   "jsdelivr": "dist/iife/index.js",
-  "main": "dist/esm/index.js",
+  "main": "index.js",
   "exports": "./dist/cjs/index.js",
   "source": "index.js",
   "files": [
@@ -31,7 +28,7 @@
     "build:cjs": "npx esbuild *.js --target=node16 --format=cjs --outdir=dist/cjs --loader:.js=jsx",
     "build:iife": "npx esbuild *.js --target=node16 --format=iife --outdir=dist/iife",
     "build": "yarn build:esm; yarn build:cjs",
-    "prepublish": "rimraf -I dist; yarn build; yarn copy:package:cjs"
+    "prepublish": "rimraf -I dist && yarn build && yarn copy:package:cjs"
   },
   "gitHead": "f05f066d450939bd46baf3ddda331a5790518873"
 }
