--- a/packages copy/react/package.json
+++ b/packages copy/react/package.json
@@ -4,11 +4,7 @@
   "license": "MIT",
   "gitHead": "f05f066d450939bd46baf3ddda331a5790518873",
   "dependencies": {
-    "@symbo.ls/react-atoms": "^2.13.8",
-    "@symbo.ls/react-avatar": "^2.13.8",
-    "@symbo.ls/react-box": "^2.13.7",
-    "@symbo.ls/react-button": "^2.13.8",
-    "@symbo.ls/react-icon": "^2.13.8",
+    "@symbo.ls/react-uikit": "^2.13.8",
     "@symbo.ls/react-provider": "^2.13.5",
     "smbls": "^2.11.460"
   },
@@ -17,10 +13,10 @@
     "react-dom": "^18.2.0"
   },
   "type": "module",
-  "module": "dist/esm/index.js",
+  "module": "index.js",
   "unpkg": "dist/iife/index.js",
   "jsdelivr": "dist/iife/index.js",
-  "main": "dist/esm/index.js",
+  "main": "index.js",
   "exports": "./dist/cjs/index.js",
   "source": "index.js",
   "files": [
@@ -32,7 +28,7 @@
     "build:esm": "npx esbuild *.js --target=es2020 --format=esm --outdir=dist/esm",
     "build:cjs": "npx esbuild *.js --target=node16 --format=cjs --outdir=dist/cjs --loader:.js=jsx && yarn copy:package:cjs",
     "build:iife": "npx esbuild *.js --target=node16 --format=iife --outdir=dist/iife",
-    "build": "yarn build:esm && yarn build:cjs",
+    "build": "yarn build:esm; yarn build:cjs",
     "prepublish": "rimraf -I dist && yarn build"
   }
 }
