--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,7 +5,11 @@
   "gitHead": "f05f066d450939bd46baf3ddda331a5790518873",
   "dependencies": {
     "@symbo.ls/react-provider": "^2.13.15",
-    "@symbo.ls/react-uikit": "^2.13.15",
+    "@symbo.ls/react-atoms": "^2.13.15",
+    "@symbo.ls/react-avatar": "^2.13.15",
+    "@symbo.ls/react-box": "^2.13.15",
+    "@symbo.ls/react-button": "^2.13.10",
+    "@symbo.ls/react-icon": "^2.13.15",
     "smbls": "^2.11.469"
   },
   "peerDependencies": {
